[package]
name = "modbus-tcp-leak"
version = "0.1.0"
authors = ["David Taylor <david.baker.taylor@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.1.19"
tokio-modbus = "0.3.4"
tokio-core = "0.1.17"
futures = "0.1.29"
tokio-service = "0.1.0"